--- a/styles.css
+++ b/styles.css
@@ -552,15 +552,27 @@ label{
   font-size: var(--dk-font-headers-biggest);
   color: #18da63;
 }
-
-
-
-
-
-
-
-
-
+/* ----- Error When Fetching on Main -----*/
+.errorOnPage{
+  display: grid;
+  background-color: var(--white);
+  grid-template-rows:1fr 1fr 1fr;
+  place-content: center;
+  color: #c62525;
+}
+.errorOnPage div{
+  margin-top: 50px;
+  padding: 50px;
+  min-width: 250px;
+  width: 100%;
+  min-height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--mb-font-headers-biggest);
+  border: 10px solid #c62525;
+  color: #c62525;
+}
 /* ----- Specifics Page -----*/
 .specifics-all_container{
   padding: 25px;
@@ -581,14 +593,14 @@ label{
 }
 .specifics_title{
   font-size: var(--mb-font-headers-biggest);
-  padding: 0 0 25px 0;
 }
 .specifics-main-img{
+  padding-top: 25px;
   width: 100%;
   background-position: center;
   background-repeat: none;
   border-radius: 2px;
-  box-shadow: var(--box-shadow);
+  box-shadow: none;
 }
 .specifics-other-img_container{
   display: grid;
@@ -1006,6 +1018,7 @@ label{
   border-radius: 2px;
   background-color: var(--black);
   position: absolute;
+  cursor: pointer;
   top: 34.75%;
   left: 62%;
   transform: translate(-50%, -50%);
@@ -1029,8 +1042,6 @@ label{
   left: -10px;
   top: 17px;
 }
-
-
 .all-posts_container{
   padding: 0 50px;
   grid-template-columns: repeat(auto-fit,minmax(376px, 1fr));
@@ -1041,6 +1052,59 @@ label{
   max-width: 400px;
   height: 380px;
 }
+
+
+
+
+
+
+/* ----- Specifics Page -----*/
+.specifics-all_container{
+  padding: 50px;
+}
+.specifics-all-text{
+  display: inline;
+}
+.specifics-text_container{
+}
+.specifics-text_container p{
+  padding: 0px 0 0 0px;
+}
+.specifics-text_container h2,.specifics-text_container h3,.specifics-text_container h4,.specifics-text_container h5,.specifics-text_container h6{
+  font-size: var(--dk-font-headers);
+  padding: 10px 0;
+}
+.specifics-text_container h3 p{
+  font-size: var(--dk-font-text);
+}
+.specifics_title{
+  font-size: var(--dk-font-headers-biggest);
+}
+.specifics-main-img{
+  float: left;
+  width: 50%;
+  height: 100%;
+  max-width: 50%;
+  padding: 0 50px 0 0px;
+}
+.specifics-other-img_container{
+  grid-template-columns: repeat(12, 1fr);
+  gap: 33px;
+}
+.specifics-other-img_container img:first-child{
+  grid-column: 1 / -9;
+  height: 250px;
+}
+.specifics-other-img_container img:nth-child(2),.specifics-other-img_container img:nth-child(3){
+  height: 250px;
+}
+.specifics-other-img_container img:nth-child(2){
+  grid-column: 5 / -5;
+}
+.specifics-other-img_container img:nth-child(3){
+  grid-column: 9 / -1;
+}
+
 
 
 
