--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ nav ul li:hover{
 .latest-posts_container{
   position: relative;
 }
-.carousel_container{
+.carousel_container ul{
   padding: 5px 25px;
   width: 100%;
   display: flex;
@@ -240,26 +240,31 @@ nav ul li:hover{
   margin-bottom: 33px;
 }
 /* -----Posts General-----*/
-.post_container{
+.post_container, .carousel-post_container{
   position: relative;
   width: 100%;
   max-width: 400px;
-  height: 391px;
+  height: 420px;
   padding: 25px;
   background-color: #fff;
   box-shadow: var(--box-shadow);
   color: var(--black);
   border-radius: 2px;
 }
-.post_container:hover{
+.carousel-post_container{
+  min-width: 350px;
+}
+.post_container:hover, .carousel-post_container:hover{
   cursor: pointer;
   background-color: #f6f6f6;
   box-shadow: 0px 6px 10px rgba(128, 128, 128, 0.352);
 }
 .post_img{
   width: 100%;
-  height: 197px;
+  height: 237px;
   background-position: center;
+  object-fit: cover;
+  object-position: center;
   background-repeat: none;
   border-radius: 2px;
   box-shadow: var(--box-shadow);
@@ -967,9 +972,17 @@ label{
     background-color: var(--white);
     box-shadow: none;
   }
+  .carousel-post_container{
+    width: 306px;
+    height: 427px;
+    padding: 10px;
+    background-color: var(--white);
+    box-shadow: none;
+  }
   .post_img{
     width: 100%;
-    height: 261px;
+    height: 241px;
+    object-fit: cover;
     border-radius: 0px;
   }
   .post_title{
@@ -1190,7 +1203,7 @@ label{
   }
 
   /* ----- Posts In General-----*/ 
-  .post_container{
+  .post_container, .carousel-post_container{
     width: 456px;
     height: 587px;
     padding: 25px;
