--- a/styles.css
+++ b/styles.css
@@ -297,9 +297,9 @@ nav ul li:hover{
   font-size: var(--mb-font-poster-header);
   float: right;
   position: absolute;
-  bottom: 20px;
+  bottom: 15px;
   right: 25px;
-  padding-top: 8px;
+  padding-top: 6px;
 }
 .post-read-more:hover{
   text-decoration: underline;
@@ -1224,6 +1224,9 @@ label{
   }
   .post_text{
     -webkit-line-clamp: 8;
+  }
+  .post-read-more{
+    bottom: 20px;
   }
   
 
