--- a/styles.css
+++ b/styles.css
@@ -204,15 +204,18 @@ nav ul li:hover{
   position: relative;
 }
 .carousel_container ul{
-  padding: 5px 25px;
+  padding: 15px 25px;
   width: 100%;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
   transition: transform 0.5s ease-in-out;
   gap: 30px;
   margin-bottom: 33px;
 }
+
 .cta-latest-posts{
   width: 50px;
   height: 100px;
@@ -253,7 +256,6 @@ nav ul li:hover{
   color: var(--black);
   border-radius: 2px;
 }
-
 .carousel-post_container{
   min-width: 350px;
 }
@@ -877,6 +879,10 @@ label{
 }
 .cta-read-more-mobile{
   display: none;
+}
+/* -----Carousel Main Page-----*/
+.carousel_container ul{
+  overflow: hidden;
 }
 /* -----Posts Main Page-----*/
 .index-headers{
