--- a/styles.css
+++ b/styles.css
@@ -489,6 +489,7 @@ nav ul li:hover{
   height: 20px;
   padding: 15px;
   margin-bottom: 18px;
+  border-radius: 0;
 }
 .error{
   border-bottom:  3px solid #d02424;
