--- a/styles.css
+++ b/styles.css
@@ -751,6 +751,7 @@ label{
 .loading_container{
   padding: 25px;
   display: flex;
+  overflow-y: scroll;
   align-items: center;
   gap: 25px;
   justify-content: center;
@@ -761,6 +762,7 @@ label{
   padding: 25px;
   background-color: #fff;
   width: 100%;
+  min-width: 300px;
   height: 350px;
   margin-bottom: 15px ;
 }
