--- a/styles.css
+++ b/styles.css
@@ -624,6 +624,8 @@ label{
   cursor: pointer;
   padding-top: 25px;
   width: 100%;
+  max-height: 600px;
+  object-fit: cover;
   background-position: center;
   background-repeat: none;
   border-radius: 2px;
@@ -1125,10 +1127,10 @@ label{
   font-size: var(--dk-font-headers-biggest);
 }
 .specifics-main-img{
+  object-fit: contain;
   float: left;
-  width: 50%;
+  max-width: 55%;
   height: 100%;
-  max-width: 50%;
   padding: 0 50px 0 0px;
 }
 .specifics-other-img_container{
